--- a/distribution/docs/src/main/resources/content/_managing/_configuring/connecting-to-external-idp.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/connecting-to-external-idp.adoc
@@ -21,7 +21,7 @@ The SP metadata can found at `https://<FQDN>:<PORT>/services/saml/sso/metadata`.
 
 [NOTE]
 ====
-The certificate that the external IdP uses for signing will need to be added to the ${branding}'s keystore. See <<{managing-prefix}updating_key_store_trust_store_via_the_admin_console,Updating Key Store / Trust Store via the Admin Console>> for details.
+The certificate that the external IdP uses for signing needs to be added to the ${branding}'s keystore. See <<{managing-prefix}updating_key_store_trust_store_via_the_admin_console,Updating Key Store / Trust Store via the Admin Console>> for details.
 ====
 
 [NOTE]
