--- a/distribution/docs/src/main/resources/content/_managing/_configuring/hiding-errors-by-role.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/hiding-errors-by-role.adoc
@@ -11,7 +11,7 @@
 
 Prevent certain users from seeing data with certain types of errors or warnings.
 Typically, this is used for security markings.
-If the *Metacard Validation Filter Plugin* is configured to *Filter errors* and/or *Filter warnings*, metacards with errors/warnings will be hidden from users without the specified user attributes.
+If the *Metacard Validation Filter Plugin* is configured to *Filter errors* and/or *Filter warnings*, metacards with errors/warnings are hidden from users without the specified user attributes.
 
 . Navigate to the *${admin-console}*.
 . Select the *${ddf-catalog}* application.
@@ -25,5 +25,5 @@ If the *Metacard Validation Filter Plugin* is configured to *Filter errors* and/
 To harden the system and prevent other ${branding} systems from querying invalid data in the local catalog, it is
 recommended to create and set user roles that are unique to the local system (ie. a user role
 that includes a UUID).
-. Select *Filter errors* to filter errors. Users without the `invalid-state` attribute will not see metacards with errors.
-. Select *Filter warnings* to filter warnings. Users without the `invalid-state` attribute will not see metacards with warnings.
+. Select *Filter errors* to filter errors. Users without the `invalid-state` attribute cannot see metacards with errors.
+. Select *Filter warnings* to filter warnings. Users without the `invalid-state` attribute cannot see metacards with warnings.
