--- a/distribution/docs/src/main/resources/content/_managing/_installing/firewall-config.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_installing/firewall-config.adoc
@@ -9,7 +9,7 @@
 (((Firewall Port Configuration)))
 
 Below is a table listing all of the default ports that ${branding} uses and a description of what they are used for.
-Firewalls will need to be configured to open these ports in order for external systems to communicate with ${branding}.
+Firewalls need to be configured to open these ports in order for external systems to communicate with ${branding}.
 
 .Port List
 [cols="1a,7a" options="header"]
