--- a/distribution/docs/src/main/resources/content/_managing/_installing/installing-from-the-command-line.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_installing/installing-from-the-command-line.adoc
@@ -25,5 +25,5 @@ The certificates must be set up manually as described in <<{managing-prefix}mana
 
 [NOTE]
 ====
-The system will need to be restarted after changing any of these settings.
+The system needs to be restarted after changing any of these settings.
 ====
