--- a/distribution/docs/src/main/resources/content/_managing/_running/console-commands.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_running/console-commands.adoc
@@ -7,7 +7,7 @@
 == {title}
 ((({title})))
 
-Once the distribution has started, administrators will have access to a powerful command line console, the ${command-console}.
+Once the distribution has started, administrators have access to a powerful command line console, the ${command-console}.
 This ${command-console} can be used to manage services, install new features, and manage the state of the system.
 
 The ${command-console} is available to the user when the distribution is started manually or may also be accessed by using the `bin/client.bat` or `bin/client` scripts.
