--- a/distribution/docs/src/main/resources/content/_managing/_configuring/ldap-server.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/ldap-server.adoc
@@ -19,7 +19,7 @@ Then change the LDAP Bind User Password in the <<{reference-prefix}Claims_Handle
 A claim is an additional piece of data about a principal that can be included in a token along with basic token data.
 A claims manager provides hooks for a developer to plug in claims handlers to ensure that the STS includes the specified claims in the issued token.
 
-Claims handlers convert incoming user credentials into a set of attribute claims that will be populated in the SAML assertion.
+Claims handlers convert incoming user credentials into a set of attribute claims that is populated in the SAML assertion.
 For example, the `LDAPClaimsHandler` takes in the user's credentials and retrieves the user's attributes from a backend LDAP server.
 These attributes are then mapped and added to the SAML assertion being created.
 Integrators and developers can add more claims handlers that can handle other types of external services that store user attributes.
