--- a/distribution/docs/src/main/resources/content/_managing/_configuring/remove-default-users-cont.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/remove-default-users-cont.adoc
@@ -7,7 +7,7 @@
 
 [WARNING]
 ====
-Once the default users are removed, the `<${branding}_HOME>/bin/client` and `<${branding}_HOME>/bin/client.bat` scripts will not work.
+Once the default users are removed, the `<${branding}_HOME>/bin/client` and `<${branding}_HOME>/bin/client.bat` scripts do not work.
 If SSH access to the Karaf shell is to be supported, edit the file `org.apache.karaf.shell.cfg` in the `<INSTALL_HOME>/etc` directory, changing the value of the `sshRealm` property from `karaf` to `ldap`.
 ====
 
