--- a/distribution/docs/src/main/resources/content/_managing/_configuring/securing-admin-console.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/securing-admin-console.adoc
@@ -19,7 +19,7 @@ To set access restrictions on the ${admin-console}, consult the organization's s
 . Select the *${ddf-security}* application.
 . Select the *Configuration* tab.
 . Select the *Web Context Policy Manager*.
-.. A dialogue will pop up that allows you to edit ${branding} access restrictions.
+.. A dialogue allows you to edit ${branding} access restrictions.
 .. If your infrastructure supports multiple <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManager,authentication methods>>, you may specify them here.
 .. Role requirements may be enforced by configuring the <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManager,required attributes>> for a given context.
 .. The <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManager,white listed contexts>> allows child contexts to be excluded from the authentication constraints of their parents.
@@ -52,4 +52,4 @@ Organizational requirements should dictate which applications are restricted and
 +
 `org.codice.ddf.security.policy.context.impl.PolicyManager="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/role=admin"`
 
-If a permission is specified, any user without the required attributes will be unable to see or modify the feature, app, or configuration.
+If a permission is specified, any user without the required attributes is unable to see or modify the feature, app, or configuration.
