--- a/distribution/docs/src/main/resources/content/_managing/_configuring/web-context-policy-manager.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/web-context-policy-manager.adoc
@@ -18,8 +18,8 @@ See <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManage
 
 === Guest Access
 ((Guest access)) is a toggleable configuration.
-Enabling guest access will cause all users to be assigned a guest principal for use throughout the entire system.
-The guest principal will be used either by itself or along with any other principals acquired from configured authentication types.
+Enabling guest access causes all users to be assigned a guest principal for use throughout the entire system.
+The guest principal is used either by itself or along with any other principals acquired from configured authentication types.
 
 === Session Storage
 Enabling session storage allows the system to persist the user login through the use of cookies.
@@ -52,7 +52,7 @@ The `web-context-policy-config.properties` file format is:
 [WARNING]
 ====
 If the file-based configuration is used, the *authentication type* configuration for web pages and endpoints in the ${admin-console} is ignored.
-All other configurations in the Web Context Policy Manager such as Guest Access, Required Attributes, and White Listed Contexts will *not* be ignored.
+All other configurations in the Web Context Policy Manager such as Guest Access, Required Attributes, and White Listed Contexts are *not* ignored.
 ====
 
 .Default Types of Authentication
@@ -78,11 +78,11 @@ All other configurations in the Web Context Policy Manager such as Guest Access,
 
 ==== Terminating and Non-Terminating Authentication Types
 Terminating authentication types are authentication types where, once hit, must either allow or forbid access to the system.
-No other authentication types will be checked once a terminating authentication type is hit.
+No other authentication types are checked once a terminating authentication type is hit.
 
 Non-Terminating authentication types are authentication types where, once hit, must first verify that the client supports the authentication type's method of obtaining credentials.
 If the client supports the non-terminating authentication type's method of obtaining credentials, it either allows or forbids access to the system.
-However if the client does not support the non-terminating authentication type's method of obtaining credentials, the system will continue to the next configured authentication type.
+However if the client does not support the non-terminating authentication type's method of obtaining credentials, the system continues to the next configured authentication type.
 
 `PKI` is the only non-terminating authentication type.
 `BASIC`, `OIDC`, and `SAML` are terminating authentication types.
@@ -94,10 +94,10 @@ The system first checks to see if the client supports the acquisition of SAML cr
 - If the connecting client is a machine that supports SAML ECP, the system can acquire SAML credentials.
 - If the connecting client is a machine that does not support SAML ECP, the system cannot acquire SAML credentials.
 
-If the system can acquire SAML credentials from the client, the system will attempt to acquire said credentials and either allow or forbid access.
-If the system cannot acquire SAML credentials from the client, the system will forbid access.
+If the system can acquire SAML credentials from the client, the system attempts to acquire said credentials and either allow or forbid access.
+If the system cannot acquire SAML credentials from the client, the system forbids access.
 
-Otherwise, if ${branding} is protected by the non-terminating `PKI` authorization type and the system cannot acquire PKI certificates from the client, the system will continue to the next configured authentication type.
+Otherwise, if ${branding} is protected by the non-terminating `PKI` authorization type and the system cannot acquire PKI certificates from the client, the system continues to the next configured authentication type.
 
 === Required Attributes
 
@@ -106,5 +106,5 @@ For example, the default required attribute for the `/admin` context is `role=sy
 
 === White Listed Contexts
 
-White listed contexts are trusted contexts which will bypass security.
-Any sub-contexts of a white listed context will be white listed as well, unless they are specifically assigned a policy.
+White listed contexts are trusted contexts which bypass security.
+Any sub-contexts of a white listed context are white listed as well, unless they are specifically assigned a policy.
