--- a/distribution/docs/src/main/resources/content/_managing/_installing/configure-single-sign-on.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_installing/configure-single-sign-on.adoc
@@ -19,12 +19,12 @@ Configure ${BRANDING}'s internal Identity Provider Server.
 . *_SP Metadata_*: The metatada of the desired Service Provider to connect to the internal IdP. Can be configured as an HTTPS URL (`https://`), file URL (`file:`), or an XML block (`&lt;md:EntityDescriptor&gt;...&lt;/md:EntityDescriptor&gt;`).
 
 . *_Require Signed AuthnRequests_*:
-Toggle whether or not to require signed `AuthnRequests`. When off, unsigned `AuthnRequests` will be rejected.
+Toggle whether or not to require signed `AuthnRequests`. When off, unsigned `AuthnRequests` are rejected.
 
-. *_Limit RelayStates to 80 Bytes_*: Toggle whether or not to restrict the `RelayState` length to 80 bytes. The SAML specification requires a maximum length of 80 bytes. When on, messages with `RelayStates` over 80 bytes will be rejected. Only disable if this length is not enforced by the IdP being connected.
+. *_Limit RelayStates to 80 Bytes_*: Toggle whether or not to restrict the `RelayState` length to 80 bytes. The SAML specification requires a maximum length of 80 bytes. When on, messages with `RelayStates` over 80 bytes are rejected. Only disable if this length is not enforced by the IdP being connected.
 
 . *_Cookie Expiration Time (minutes)_*:
-Sets the cookie expiration time for Single Sign On, which determines how long the internal IdP will cache SAML assertions for later use. This value should match the lifetime of SAML assertions.
+Sets the cookie expiration time for Single Sign On, which determines how long the internal IdP caches SAML assertions for later use. This value should match the lifetime of SAML assertions.
 
 IdP Client::
 Configure handling of incoming requests where SAML authentication is enabled.
@@ -33,7 +33,7 @@ Configure handling of incoming requests where SAML authentication is enabled.
 The metadata of the desired IdP to authenticate with. Can be configured as an HTTPS URL (`https://`), file URL (`file:`), or an XML block (`&lt;md:EntityDescriptor&gt;...&lt;/md:EntityDescriptor&gt;`).
 
 . *_Perform User-Agent Check_*:
-If selected, this will allow clients that do not support ECP and are not browsers to fall back to PKI, BASIC, and potentially GUEST authentication, if enabled.
+If selected, this allows clients that do not support ECP and are not browsers to fall back to PKI, BASIC, and potentially GUEST authentication, if enabled.
 
 .OIDC
 Select the IdP type desired and set other options as needed.
@@ -42,7 +42,7 @@ OIDC Handler Configuration::
 Configurations relating to handling incoming requests where OIDC authentication is enabled.
 
 . *_IdP Type_*:
-The type of IdP that OIDC will be authenticating with.
+The type of IdP to authenticate with OIDC.
 
 . *_Client ID_*:
 Unique ID for the client. This may be provided by the Identity Provider.
