--- a/distribution/docs/src/main/resources/content/_managing/_installing/high-availability-initial-setup-exceptions.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_installing/high-availability-initial-setup-exceptions.adoc
@@ -15,7 +15,7 @@ These steps are handled differently for the initial setup of a Highly Available 
 In order to integrate with a failover proxy, the ${branding} node's system properties (in `${home_directory}/etc/custom.system.properties`) must be changed to publish the correct port to external systems and users.
 This must be done before installing the first ${branding} node. See <<{managing-prefix}high_availability_initial_setup, High Availability Initial Setup>>.
 
-There are two internal port properties that must be changed to whatever ports the ${branding} will use on its system.
+There are two internal port properties that must be changed to whatever ports the ${branding} uses on its system.
 Then there are two external port properties that must be changed to whatever ports the failover proxy is forwarding traffic through.
 
 [WARNING]
@@ -25,7 +25,7 @@ There may be unexpected behavior otherwise.
 ====
 
 In the below example, the failover proxy with a hostname of service.org is forwarding https traffic via 8993 and http traffic via 8181.
-The ${branding} node will run on 1111 for https and 2222 for http (on the host that it's hosted on).
+The ${branding} node runs on 1111 for https and 2222 for http (on the host that it's hosted on).
 The hostname of the ${branding} must match the hostname of the proxy.
 [source]
 ----
@@ -47,7 +47,7 @@ On Windows, this means they must be under the same drive.
 
 === Highly Available Security Auditing
 
-A third party tool will have to be used to persist the logs in a highly available manner.
+A third party tool must be used to persist the logs in a highly available manner.
 
 * Edit the `${home_directory}/etc/org.ops4j.pax.logging.cfg` file to enable log4j2, following the steps in <<{managing-prefix}enabling_fallback_audit_logging, Enabling Fallback Audit Logging>>.
 * Then put the appropriate log4j2 appender in `${home_directory}/etc/log4j2.xml` to send logs to the chosen third party tool.
@@ -71,7 +71,7 @@ This certificate, and any subsequent certificates signed by the Demo CA, are int
 and should not be used in production.
 ====
 
-Certificates need to have Subject Alternative Names (SANs) which will include the host for the failover
+Certificates need to have Subject Alternative Names (SANs) which include the host for the failover
 proxy and for both ${branding} nodes. A certificate with SANs signed by the Demo CA can be obtained by
 navigating to `${home_directory}/etc/certs/` and, assuming the proxy's hostname is service.org, running
 the following for UNIX operating systems:
@@ -90,7 +90,7 @@ CertNew -cn service.org -san "DNS:service.org"
 
 [NOTE]
 ====
-Systems that use DDF version 2.11.4 or later will automatically get a DNS SAN entry matching the CN
+Systems that use DDF version 2.11.4 or later automatically get a DNS SAN entry matching the CN
 without the need to specify the `-san` argument to the `CertNew` command.
 ====
 
@@ -100,5 +100,5 @@ More customization for certs can be achieved by following the steps at
 === High Availability Installation Profile
 
 Instead of having to manually turn features on and off, there is a High Availability installation profile.
-This profile will not show up in the UI Installer, but can be installed by executing `profile:install ha` on the command line *instead* of stepping through the UI Installer.
-This profile will install all of the High Availability supported features.
+This profile does not show up in the UI Installer, but can be installed by executing `profile:install ha` on the command line *instead* of stepping through the UI Installer.
+This profile installs all of the High Availability supported features.
