--- a/distribution/docs/src/main/resources/content/_managing/_installing/install-prereqs.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_installing/install-prereqs.adoc
@@ -9,7 +9,7 @@
 
 [WARNING]
 ====
-For security reasons, ${branding} cannot be started from a user's home directory. If attempted, the system will automatically shut down.
+For security reasons, ${branding} cannot be started from a user's home directory. If attempted, the system automatically shuts down.
 ====
 
 These are the system/environment requirements to configure _prior_ to an installation.
