--- a/distribution/docs/src/main/resources/content/_managing/_running/directory-monitor-ingest.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_running/directory-monitor-ingest.adoc
@@ -10,8 +10,8 @@
 The ${ddf-catalog} application contains a ((Content Directory Monitor)) feature that allows files placed in a single directory to be monitored and ingested automatically.
 For more information about configuring a directory to be monitored, see <<{managing-prefix}configuring_the_content_directory_monitor,Configuring the Content Directory Monitor>>.
 
-Files placed in the monitored directory will be ingested automatically.
-If a file cannot be ingested, they will be moved to an automatically created directory named `.errors`.
+Files placed in the monitored directory are ingested automatically.
+If a file cannot be ingested, they are moved to an automatically created directory named `.errors`.
 More information about the ingest operations can be found in the ingest log.
 The default location of the log is `${home_directory}/data/log/ingest_error.log`.
 Optionally, ingested files can be automatically moved to a directory called `.ingested`.
