--- a/distribution/docs/src/main/resources/content/_managing/_running/forms-commands.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_running/forms-commands.adoc
@@ -21,13 +21,13 @@ forms:load --formsDirectory "/etc/forms" --forms "forms.json" --results "results
 ----
 
 Where: +
-*-formsDirectory* Specifies the directory in which the forms JSON and XML will reside
+*-formsDirectory* Specifies the directory in which the forms JSON and XML reside.
 
-*-results* Specifies the file name of the `results.json` file
+*-results* Specifies the file name of the `results.json` file.
 
-*-forms* Specifies the file name of the `forms.json` file
+*-forms* Specifies the file name of the `forms.json` file.
 
-It's important to note that `forms:load` will fallback to the system default location for forms, results and the forms directory. The defaults are as follows:
+It's important to note that `forms:load` falls back to the system default location for forms, results and the forms directory. The defaults are as follows:
 ```
 formsDirectory: "/etc/forms"
 forms: "forms.json"
@@ -38,7 +38,7 @@ Example search forms and result form data can be found in `${home_directory}/etc
 
 Managing Forms
 
-In addition to ingesting new system forms into the system, we provide the capability to manage the forms, view the forms and remove them.
+In addition to ingesting new system forms into the system, you have the capability to manage the forms, view the forms and remove them.
 
 .Viewing All Forms
 ----
