--- a/distribution/docs/src/main/resources/content/_managing/_securing/managing-crl.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_securing/managing-crl.adoc
@@ -45,7 +45,7 @@ $> openssl ca -gencrl -out crl-tokenissuer-revoked.pem
 
 [NOTE]
 ====
-Enabling CRL revocation or modifying the CRL file will require a restart of ${branding} to apply updates.
+Enabling CRL revocation or modifying the CRL file requires a restart of ${branding} to apply updates.
 ====
 
 . Place the CRL in ${home_directory}/etc/keystores.
@@ -56,13 +56,13 @@ Enabling CRL revocation or modifying the CRL file will require a restart of ${br
 .. `${home_directory}/etc/ws-security/issuer/signature.properties`
 . (Replace <CRL_FILENAME> with the file path or URL of the CRL file used in previous step.)
 
-Adding this property will also enable CRL revocation for any context policy implementing PKI authentication.
-For example, setting PKI as the authentication type for web pages in the Web Context Policy Manager will disable basic authentication and require a certificate.
-If a certificate is not in the CRL, it will be allowed through, otherwise it will get a 401 error.
-If no certificate is provided, and guest access is enabled on the web context policy, guest access will be granted.
+Adding this property also enables CRL revocation for any context policy implementing PKI authentication.
+For example, setting PKI as the authentication type for web pages in the Web Context Policy Manager disables basic authentication and require a certificate.
+If a certificate is not in the CRL, it is allowed through. If not, it receives a 401 error.
+If no certificate is provided, and guest access is enabled on the web context policy, guest access is granted.
 
 This also enables CRL revocation for the STS endpoint.
-The STS CRL Interceptor monitors the same `encryption.properties` file and operates in an identical manner to the PKI Authenication's CRL handler. Enabling the CRL via the `encryption.properties` file will also enable it for the STS, and also requires a restart.
+The STS CRL Interceptor monitors the same `encryption.properties` file and operates in an identical manner to the PKI Authenication's CRL handler. Enabling the CRL via the `encryption.properties` file also enabless it for the STS, and also requires a restart.
 
 If the CRL cannot be placed in ${home_directory}/etc/keystores but can be accessed via an *HTTPS* URL:
 
@@ -73,25 +73,25 @@ If the CRL cannot be placed in ${home_directory}/etc/keystores but can be access
 . Add the *HTTPS* URL under *CRL URL address*
 . Check the *Enable CRL via URL* option
 
-A local CRL file will be created and the `encryption.properties` and `signature.properties` files will be set as mentioned above.
+A local CRL file is created and the `encryption.properties` and `signature.properties` files are set as mentioned above.
 
 ===== Add Revocation to a Web Context
 
-The PKIHandler implements CRL revocation, so any web context that is configured to use PKI authentication will also use CRL revocation if revocation is enabled.
+The PKIHandler implements CRL revocation, so any web context that is configured to use PKI authentication also uses CRL revocation if revocation is enabled.
 
 . After enabling revocation (see above), open the *Web Context Policy Manager*.
 . Add or modify the *Authentication Types for Web Pages* and *Authentication Types for Endpoints* configurations to use PKI.
 . If guest access is also required, check the `Allow Guest Access` box in the policy.
 
-With guest access, a user with a revoked certificate will be given a 401 error, but users without a certificate will be able to access the web context as the guest user.
+With guest access, a user with a revoked certificate is given a 401 error, but users without a certificate is able to access the web context as the guest user.
 
 The STS CRL interceptor does not need a web context specified.
-The CRL interceptor for the STS will become active after specifying the CRL file path, or the URL for the CRL, in the `encryption.properties` file and restarting ${branding}.
+The CRL interceptor for the STS becomes active after specifying the CRL file path, or the URL for the CRL, in the `encryption.properties` file and restarting ${branding}.
 
 [NOTE]
 ====
-Disabling or enabling CRL revocation or modifying the CRL file will require a restart of ${branding} to apply updates.
-If CRL checking is already enabled, adding a new context via the *Web Context Policy Manager* will not require a restart.
+Disabling or enabling CRL revocation or modifying the CRL file requires a restart of ${branding} to apply updates.
+If CRL checking is already enabled, adding a new context via the *Web Context Policy Manager* does not require a restart.
 ====
 
 ===== Adding Revocation to an Endpoint
@@ -126,7 +126,7 @@ Add the following property to the `jasws` endpoint in the endpoint's `blueprint.
 
 ===== Verifying Revocation
 
-A *Warning* similar to the following will be displayed in the logs of the source and endpoint showing the exception encountered during certificate validation:
+A *Warning* similar to the following is displayed in the logs of the source and endpoint showing the exception encountered during certificate validation:
 
 [source]
 ----
@@ -164,6 +164,6 @@ The advantage of using an OCSP Server over a CRL is the fact that a local copy o
 
 [NOTE]
 ====
-If an error occurs while communicating with the OCSP server, an alert will be posted to the ${admin-console}.
-Until the error is resolved, certificates will not be verified against the server.
+If an error occurs while communicating with the OCSP server, an alert is posted to the ${admin-console}.
+Until the error is resolved, certificates are not verified against the server.
 ====
