--- a/distribution/docs/src/main/resources/content/_managing/_securing/managing-keystores.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_securing/managing-keystores.adoc
@@ -10,13 +10,13 @@
 (((Keystores)))Certificates, and sometimes their associated private keys, are stored in keystore files.
 ${branding} includes two default keystore files, the server key store and the server trust store.
 The server keystore holds ${branding}'s certificate and private key.
-It will also hold the certificates of other nodes whose signature ${branding} will accept.
+It also holds the certificates of other nodes whose signature ${branding} accept.
 (((Truststore)))The truststore holds the certificates of nodes or other entities that ${branding} needs to trust.
 
 [NOTE]
 ====
 Individual certificates of other nodes should be added to the keystore instead of CA certificates.
-If a CA's certificate is added, ${branding} will automatically trust any certificate that is signed by that CA.
+If a CA's certificate is added, ${branding} automatically trusts any certificate that is signed by that CA.
 ====
 
 ==== Adding an Existing Server Keystore
