--- a/distribution/docs/src/main/resources/content/_managing/_securing/securing-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_securing/securing-intro.adoc
@@ -12,12 +12,12 @@ Security is an important consideration for ${branding}, so it is imperative to u
 .Securing ${branding} Components
 [IMPORTANT]
 ====
-${branding} is enabled with an ((Insecure Defaults Service)) which will warn users/admins if the system is configured with insecure defaults.
+${branding} is enabled with an ((Insecure Defaults Service)) which warns users/admins if the system is configured with insecure defaults.
 
 A banner is displayed on the admin console notifying "The system is insecure because default configuration values are in use."
 
 A detailed view is available of the properties to update.
 ====
 
-Security concerns will be highlighted in the configuration sections to follow.
+Security concerns are highlighted in the configuration sections to follow.
 
